# NewSense

./: .gitignore  LICENSE  README.md  config.py  dashboard.py  database.py  discoverer.py  main.py  punkt_tab_downloader.py  pyproject.toml  scheduler.py  scraper.py  sentiment.py
dags/: news_pipeline_dag.py
tests/: test_pipeline.py
